--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <a class="nav-link" aria-current="page" href="#">Strona głowna</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link navbar-collapse" href="#features">Usługi</a>
+              <a class="nav-link" href="#features">Usługi</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact">Kontakt</a>
