--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Strona głowna</a>
+              <a class="nav-link" aria-current="page" href="#title">Strona głowna</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#features">Usługi</a>
+              <a class="nav-link navbar-collapse" href="#features">Usługi</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact">Kontakt</a>
+              <a class="nav-link" href="#contact">Kontak</a>
             </li>
           </ul>
         </div>
