--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       <!-- Nav Bar -->
       <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="#title"><img class="img-netia" src="./images/Netia-logo.jpg" alt="NETIA"></a>
+        <a class="navbar-brand" href="#"><img class="img-netia" src="./images/Netia-logo.jpg" alt="NETIA"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
           aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -45,15 +45,20 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#title">Strona głowna</a>
+              <a class="nav-link" aria-current="page" href="#">Strona głowna</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link navbar-collapse" href="#features">Usługi</a>
+              <a class="nav-link" href="#features">Usługi</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact">Kontak</a>
+              <a class="nav-link" href="#contact">Kontakt</a>
+            </li>
+            
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="tel:660702267">Tel. 660702267</a>
             </li>
           </ul>
+        
         </div>
       </nav>
 
@@ -65,6 +70,8 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <picture>
+              <h5 class="position-absolute napis-reklama-1">Internet Światłowodowy</h5>
+              <h5 class="position-absolute napis-reklama-2">+ Telewizja</h5>
               <button type="button" onclick="window.location.href='#contact';" class="kupa z-1 position-absolute  btn  btn-primary btn-css">Zamów pakiet</button>
               <button type="button" onclick="window.location.href='#features';" class="kupa-2 z-1 position-absolute btn btn-outline-light btn-css">Zobacz
                 szczegóły</button>
@@ -74,12 +81,14 @@
             </picture>
             <div class="col-md-12 text-center">
               <button type="button" onclick="window.location.href='tel:660702267';" class="col-6 kupa-3 btn  btn-primary btn-css">Zamów pakiet</button>
-              <button type="button" onclick="window.location.href='#features';" class="col-6 kupa-4 btn btn-dark btn-css">Zobacz szczegóły</button>
+              <button type="button" onclick="window.location.href='#oferta-1';" class="col-6 kupa-4 btn btn-dark btn-css">Zobacz szczegóły</button>
             </div>
 
           </div>
           <div class="carousel-item">
             <picture>
+              <h5 class="position-absolute napis-reklama-3">3 miesiące</h5>
+              <h4 class="position-absolute napis-reklama-4"><strong>ZA DARMO</strong></h4>
               <button type="button" onclick="window.location.href='#contact';" class="kupa z-2 position-absolute  btn  btn-primary btn-css">Zamów pakiet</button>
               <button type="button" onclick="window.location.href='#features';" class="kupa-2 z-2 position-absolute btn btn-outline-light btn-css">Zobacz
                 szczegóły</button>
@@ -89,12 +98,12 @@
             </picture>
             <div class="col-md-12 text-center">
               <button type="button" onclick="window.location.href='tel:660702267';" class="col-6 kupa-3 btn  btn-primary btn-css">Zamów pakiet</button>
-              <button type="button" onclick="window.location.href='#features';" class="col-6 kupa-4 btn btn-dark btn-css">Zobacz szczegóły</button>
+              <button type="button" onclick="window.location.href='#oferta-1';" class="col-6 kupa-4 btn btn-dark btn-css">Zobacz szczegóły</button>
             </div>
           </div>
           <div class="carousel-item">
             <picture>
-              <button type="button" onclick="window.location.href='#features';" class="kupa z-1 position-absolute  btn  btn-primary btn-css">Zamów pakiet</button>
+              <button type="button" onclick="window.location.href='#contact';" class="kupa z-1 position-absolute  btn  btn-primary btn-css">Zamów pakiet</button>
               <button type="button" onclick="window.location.href='#features';" class="kupa-2 z-1 position-absolute btn btn-outline-light btn-css">Zobacz
                 szczegóły</button>
               <source media="(min-width: 992px)" srcset="images\desktop-slajder-netia-go_poprawione.png">
@@ -103,7 +112,7 @@
             </picture>
             <div class="col-md-12 text-center">
               <button type="button" onclick="window.location.href='tel:660702267';" class="col-6 kupa-3 btn  btn-primary btn-css">Zamów pakiet</button>
-              <button type="button" onclick="window.location.href='#features';" class="col-6 kupa-4 btn btn-dark btn-css">Zobacz szczegóły</button>
+              <button type="button" onclick="window.location.href='#oferta-1';" class="col-6 kupa-4 btn btn-dark btn-css">Zobacz szczegóły</button>
             </div>
 
           </div>
@@ -127,12 +136,14 @@
 
   </section>
 
+  <br>
+
   <!-- features -->
 
   <div class="ft-section text-center">
     <hr>
     <h2 class="ft-heading">Dostępne pakiety</h2>
-    <hr>
+    <hr  id="oferta-1">
   </div>
 
   <section id="features" class="text-center">
@@ -147,7 +158,7 @@
           <div class="card-header card-h-1">
             <h3 class="card-prompt">600 Mb/s</h3>
             <h3 class="card-prompt">+ TV 99 kanałów</h3>
-          </div class="card-body">
+          </div>
 
           <p class="card-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
             ut labore et
@@ -231,6 +242,8 @@
       </div>
 
     </div>
+
+
    
   </section>
 
