--- a/index.html
+++ b/index.html
@@ -70,14 +70,18 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <picture>
+
               <h5 class="position-absolute napis-reklama-1">Internet Światłowodowy</h5>
               <h5 class="position-absolute napis-reklama-2">+ Telewizja</h5>
+
               <button type="button" onclick="window.location.href='#contact';" class="kupa z-1 position-absolute  btn  btn-primary btn-css">Zamów pakiet</button>
               <button type="button" onclick="window.location.href='#features';" class="kupa-2 z-1 position-absolute btn btn-outline-light btn-css">Zobacz
                 szczegóły</button>
+
               <source media="(min-width: 992px)" srcset="images\netia_TSCS-296_mandalorian_1920x500.png">
-              <source media="(min-width: 465px)" srcset="images\netia_TSCS-296_mandalorian_767x262-transformed.png">
-              <img class="mando" src="images\mobile_slajder_NetaGO_2.png " alt="a cute kitten">
+              <source media="(max-width: 992px)" srcset="images\netia_TSCS-296_mandalorian_767x262-transformed.png">
+              <img class="mando" src="images/netia_TSCS-296_mandalorian_767x262-transformed.png" alt="Netia Internet">
+
             </picture>
             <div class="col-md-12 text-center">
               <button type="button" onclick="window.location.href='tel:660702267';" class="col-6 kupa-3 btn  btn-primary btn-css">Zamów pakiet</button>
@@ -93,8 +97,8 @@
               <button type="button" onclick="window.location.href='#features';" class="kupa-2 z-2 position-absolute btn btn-outline-light btn-css">Zobacz
                 szczegóły</button>
               <source media="(min-width: 992px)" srcset="images\netia_TSCS-296_SkarbNarodow_1920x500.png">
-              <source media="(min-width: 465px)" srcset="images\netia_TSCS-296_SkarbNarodow_767x262.png">
-              <img class="mando" src="images\mobile_slajder_NetaGO_2.png " alt="a cute kitten">
+              <source media="(max-width: 992px)" srcset="images\netia_TSCS-296_SkarbNarodow_767x262.png">
+              <img class="mando" src="images/netia_TSCS-296_SkarbNarodow_767x262.png" alt="a cute kitten">
             </picture>
             <div class="col-md-12 text-center">
               <button type="button" onclick="window.location.href='tel:660702267';" class="col-6 kupa-3 btn  btn-primary btn-css">Zamów pakiet</button>
@@ -107,7 +111,7 @@
               <button type="button" onclick="window.location.href='#features';" class="kupa-2 z-1 position-absolute btn btn-outline-light btn-css">Zobacz
                 szczegóły</button>
               <source media="(min-width: 992px)" srcset="images\desktop-slajder-netia-go_poprawione.png">
-              <source media="(min-width: 465px)" srcset="images\mobile_slajder_NetaGO_2.png">
+              <source media="(max-width: 992px)" srcset="images\mobile_slajder_NetaGO_2.png">
               <img class="mando" src="images\mobile_slajder_NetaGO_2.png " alt="a cute kitten">
             </picture>
             <div class="col-md-12 text-center">
