--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Netia internet</title>
 
   <link rel="icon" href="./images/favicon.ico">
 
@@ -37,10 +37,8 @@
       <!-- Nav Bar -->
       <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
         <a class="navbar-brand" href="#"><img class="img-netia" src="./images/Netia-logo.jpg" alt="NETIA"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
-          aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+        <a class="nav-link deskpot-hide" aria-current="page" href="tel:660702267"><strong class="tel">Tel.
+          660702267</strong></a>
 
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
           <ul class="navbar-nav ms-auto">
@@ -82,7 +80,7 @@
                 szczegóły</button>
 
               <source media="(min-width: 992px)" srcset="images\netia_TSCS-296_mandalorian_1920x500.png">
-              <source media="(max-width: 992px)" srcset="images\netia_TSCS-296_mandalorian_767x262-transformed.png">
+              <source media="(max-width: 992px)" srcset="images\netia_TSCS-296_mandalorian_767x262-transformed-1.png">
               <img class="mando" src="images/netia_TSCS-296_mandalorian_767x262-transformed.png" alt="Netia Internet">
 
             </picture>
@@ -104,7 +102,7 @@
                 class="kupa-2 z-2 position-absolute btn btn-outline-light btn-css">Zobacz
                 szczegóły</button>
               <source media="(min-width: 992px)" srcset="images\netia_TSCS-296_SkarbNarodow_1920x500.png">
-              <source media="(max-width: 992px)" srcset="images\netia_TSCS-296_SkarbNarodow_767x262.png">
+              <source media="(max-width: 992px)" srcset="images\netia_TSCS-296_SkarbNarodow_767x262-1.png">
               <img class="mando" src="images/netia_TSCS-296_SkarbNarodow_767x262.png" alt="a cute kitten">
             </picture>
             <div class="col-md-12 text-center">
@@ -122,7 +120,7 @@
                 class="kupa-2 z-1 position-absolute btn btn-outline-light btn-css">Zobacz
                 szczegóły</button>
               <source media="(min-width: 992px)" srcset="images\desktop-slajder-netia-go_poprawione.png">
-              <source media="(max-width: 992px)" srcset="images\mobile_slajder_NetaGO_2.png">
+              <source media="(max-width: 992px)" srcset="images\mobile_slajder_NetaGO_2-1.png">
               <img class="mando" src="images\mobile_slajder_NetaGO_2.png " alt="a cute kitten">
             </picture>
             <div class="col-md-12 text-center">
@@ -134,7 +132,16 @@
 
           </div>
         </div>
-       
+        <button class="carousel-control-prev mobile-hide" type="button" data-bs-target="#carouselExampleAutoplaying"
+          data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next mobile-hide" type="button" data-bs-target="#carouselExampleAutoplaying"
+          data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
 
 
@@ -181,6 +188,7 @@
           </div>
 
           <div class="card-footer">
+            <h4>65 zł/mies.</h4>
             <button class="btn-features btn btn-sm btn-success" onclick="window.location.href='tel:660702267';"><i
                 class="fa-regular fa-phone-volume"></i>
               Zamów Teraz</button>
@@ -208,6 +216,7 @@
           </div>
 
           <div class="card-footer">
+            <h4>75 zł/mies.</h4>
             <button class="btn-features btn btn-sm btn-success" onclick="window.location.href='tel:660702267';"><i
                 class="fa-regular fa-phone-volume"></i>
               Zamów Teraz</button>
@@ -238,6 +247,7 @@
           </div>
 
           <div class="card-footer">
+            <h4>90 zł/mies.</h4>
             <button class="btn-features btn btn-sm btn-success" onclick="window.location.href='tel:660702267';"><i
                 class="fa-regular fa-phone-volume"></i>
               Zamów Teraz</button>
@@ -278,7 +288,8 @@
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
       <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Strona Główna</a></li>
       <li class="nav-item"><a href="tel:660702267" class="nav-link px-2 text-body-secondary">Kontakt</a></li>
-      <li class="nav-item"><a href="./polityka-prywatności.html" class="nav-link px-2 text-body-secondary">Polityka Prywatności</a></li>
+      <li class="nav-item"><a href="./polityka-prywatności.html" class="nav-link px-2 text-body-secondary">Polityka
+          Prywatności</a></li>
     </ul>
     <p class="text-center text-body-secondary">© 2023 Netia, Inc</p>
   </footer>
