--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
               <a class="nav-link" aria-current="page" href="#">Strona głowna</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#features">Usługi</a>
+              <a class="nav-link active" href="#features">Usługi</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact">Kontakt</a>
+              <a class="nav-link active" href="#contact">Kontakt</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="tel:660702267"><strong class="tel">Tel.
+              <a class="nav-link active" aria-current="page" href="tel:660702267"><strong class="tel">Tel.
                   660702267</strong></a>
             </li>
           </ul>
