--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
         <a class="navbar-brand" href="#"><img class="img-netia" src="./images/Netia-logo.jpg" alt="NETIA"></a>
         <a class="nav-link deskpot-hide" aria-current="page" href="tel:660702267"><strong class="tel">Tel.
-          660702267</strong></a>
+          660 702 267</strong></a>
 
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
           <ul class="navbar-nav ms-auto">
